feature:new application domain model